# big-little-engine

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp  ogl-demo.sln  ogl-demo.vcxproj  ogl-demo.vcxproj.filters  program_shader.cpp  program_shader.h  shader.cpp  shader.h  shape.cpp  shape.h  stb_image.cpp  texture.cpp  texture.h  textureMVP.cpp  textureMVP.h  texturesBank.cpp  texturesBank.h  utils.cpp  utils.h
examples/basics/: main.cc  main2.cc
include/lbe/: ogl_object_3d.h  ogl_program_shader.h  ogl_shape.h  ogl_texture.h  ogl_texture_mvp.h  ogl_textures_bank.h  utils.h
res/shaders/: object3d.vert  perspectiveTexture.vert  simple.vert  texture.vert  textureMatrix.vert
shaders/: texture.frag
src/: ogl_object_3d.cc  ogl_program_shader.cc  ogl_shape.cc  ogl_texture.cc  ogl_texture_mvp.cc  ogl_textures_bank.cc  utils.cc
third/glad/: CMakeLists.txt
third/glad/include/glad/: glad.h
third/glfw/: CMakeLists.txt
third/glm/: CMakeLists.txt
third/imgui/: CMakeLists.txt
third/spdlog/: CMakeLists.txt
third/stb/: CMakeLists.txt
